# Projet-Series-Temporelle-S4

./: .gitignore  Dic_Aerospace.py  Lib_Aerospace.py  README.md  app.py  pyproject.toml  requirements.txt
results/json/: AIR.PA.json  AM.PA.json  BDRAF.json  NOC.json
results/notebook/: BDRAF.json  NOC.json  air.pa_&_am.pa.ipynb  alicia.ipynb  member3_notebook.ipynb  ousaphea_memberA.ipynb  veasna_notebook.ipynb  voatei_notebook.ipynb  votei.ipynb
static/css/: common.css  index.css  resultats.css  styles.css
static/js/: charts.js  index.js  resultats.js
templates/: Resultats.html  index.html
